extends PanelContainer

# === UI ë…¸ë“œ ê²½ë¡œ (ì”¬ì— ì´ ì´ë¦„ëŒ€ë¡œ ë…¸ë“œê°€ ìˆì–´ì•¼ í•¨) ===
@onready var url_input = $Layout/ContentArea/VBoxContainer/HBoxContainer/LineEdit_URL
@onready var btn_go = $Layout/ContentArea/VBoxContainer/HBoxContainer/Button_Go
@onready var web_view = $Layout/ContentArea/VBoxContainer/RichTextLabel_Content
@onready var title_bar = $Layout/TitleBar

# === ì°½ ì´ë™ ë³€ìˆ˜ (app_email.gd ì°¸ê³ ) ===
var dragging = false
var drag_start_position = Vector2()

# ì„œë²„ì—ì„œ ë°›ì€ ì›¹ì‚¬ì´íŠ¸ ë°ì´í„° {"url": "content"}
var website_data = {}

func _ready():
	# 1. ë‹«ê¸° ë²„íŠ¼
	$Layout/TitleBar/CloseButton.pressed.connect(queue_free)
	
	# 2. ë“œë˜ê·¸ ê¸°ëŠ¥
	title_bar.gui_input.connect(_on_title_bar_gui_input)
	
	# 3. ë¸Œë¼ìš°ì € ê¸°ëŠ¥ ì—°ê²°
	btn_go.pressed.connect(_on_navigate)
	url_input.text_submitted.connect(func(_text): _on_navigate())
	
	# 4. Globalì—ì„œ ë°ì´í„° ê°€ì ¸ì˜¤ê¸°
	if Global.mission_data.has("websites"):
		website_data = Global.mission_data["websites"]
	
	# 5. ì´ˆê¸° í™”ë©´
	web_view.text = "[center]\n\nğŸŒ ì ‘ì†í•  ì£¼ì†Œë¥¼ ì…ë ¥í•˜ì„¸ìš”.\n(ì˜ˆ: www.corpx.com)[/center]"

func _on_navigate():
	var input_url = url_input.text.strip_edges()
	
	# [ê°œì„ ëœ ë¡œì§] URL ì •ê·œí™” (ìœ ì—°í•œ ì…ë ¥ ì²˜ë¦¬)
	# 1. http:// ë˜ëŠ” https:// ì œê±°
	input_url = input_url.replace("http://", "").replace("https://", "")
	# 2. ì†Œë¬¸ìë¡œ ë³€í™˜ (InstarGram.com -> instargram.com)
	input_url = input_url.to_lower()
	# 3. ëì— ë¶™ì€ ìŠ¬ë˜ì‹œ ì œê±° (com/ -> com)
	if input_url.ends_with("/"):
		input_url = input_url.left(-1)
	
	# ë¡œë”© ì—°ì¶œ
	web_view.text = "[center]Connecting...[/center]"
	await get_tree().create_timer(0.3).timeout
	
	# ì €ì¥ëœ ë°ì´í„°ì™€ ë¹„êµ
	if website_data.has(input_url):
		web_view.text = website_data[input_url]
	else:
		# 404 ì—ëŸ¬ (ë¹¨ê°„ìƒ‰ìœ¼ë¡œ ê°•ì¡°)
		web_view.text = "[center][color=red][size=24]âŒ 404 Not Found[/size][/color]\n\nURLì„ ì°¾ì„ ìˆ˜ ì—†ìŠµë‹ˆë‹¤.\n(%s)[/center]" % input_url

# === ì°½ ë“œë˜ê·¸ ë¡œì§ (ê¸°ì¡´ ì•±ë“¤ê³¼ ë™ì¼) ===
func _on_title_bar_gui_input(event):
	if event is InputEventMouseButton:
		if event.button_index == MOUSE_BUTTON_LEFT:
			if event.pressed:
				dragging = true
				drag_start_position = get_global_mouse_position() - global_position
				move_to_front()
			else:
				dragging = false
	elif event is InputEventMouseMotion and dragging:
		global_position = get_global_mouse_position() - drag_start_position
